<resources>
    <string name="app_name">Jagrati</string>
    <string name="splash_attr">An Initiative by IIITDM Jabalpur</string>
    <string name="jagrati_logo">Jagrati logo</string>
    <string name="iiitdmj_logo">IIITDMJ Logo</string>
    <string name="welcome_to">Welcome to</string>
    <string name="family">Family</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_signup_page">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="forget_password">Forget Password</string>
    <string name="signup_email">Enter Email</string>
    <string name="signup_enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_otp">Enter code from mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_otp">Get OTP</string>
    <string name="n_nclasses">\n\nClasses</string>
    <string name="n_npast_attendance">\n\npast Attendance</string>
    <string name="n_nattendance">\n\nAttendance</string>
    <string name="we_lift_by_lifting_others">We rise by lifting others</string>
    <string name="attendance">Attendence\nand\nStudents</string>
    <string name="classes">Classes</string>
    <string name="info">Info</string>
    <string name="past_attendance">Students</string>
    <string name="Group">Group One</string>
    <string name="enter_group_name">Enter Group name</string>
    <string name="hint">Enter here</string>
    <string name="saveGroup">Save Group</string>
    <string name="enter_class_name">Enter Class name</string>
    <string name="saveClass">Save Class</string>
    <string name="Class">Class One</string>
    <string name="checker">checker</string>
    <string name="quiz">Quiz</string>
    <string name="addQuiz">Add Quiz</string>
    <string name="enter_quiz_detail">"Enter name and description "</string>
    <string name="hint_quizName">Enter Quiz Name here</string>
    <string name="hint_quizDescription">Enter Quiz Description here</string>
    <string name="addQues">Save Question</string>
    <string name="volunteer_login">Volunteer Login</string>
    <string name="add">add</string>
    <string name="there_must_be_something">there must be something</string>
    <string name="log_out">Log Out</string>
    <string name="profile">profile</string>
    <string name="cancel">Cancel</string>
    <string name="hint1">Group</string>
    <string name="you_are_about_to_sign_out_nare_you_sure">Sure about sign out??</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="submit">submit</string>
    <string name="your_profile">My Profile</string>
    <string name="draweropen">Drawer open</string>
    <string name="drawerclosed">Drawer Closed</string>
    <string name="title_activity_student_holder">StudentHolderActivity</string>
    <string name="tab_text_1">Past Attendance</string>
    <string name="tab_text_2">Student</string>
    <string name="tab_text_3">Attendance</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jg">\nJagrati</string>
    <string name="hint_quizTime">Enter Time (In minutes)</string>
    <string name="profile_dp">Profile DP</string>
    <string name="scheduling">Schedule</string>
    <string name="delete_popup_warning">Are you sure for deleting this ?</string>
    <string name="n">Study Material</string>
    <string name="class_pic">Class Pic</string>

    <string name="schedule">Schedule</string>
    <string name="books">Books</string>
    <string name="study_material">Study\nMaterial</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="student_login">Student Login</string>
    <string name="login_as_student">Login as Student</string>
</resources>